<resources>
    <string name="app_name_main" translatable="false">PDF Viewer</string>
    <string name="loading">Loading…</string>
    <string name="launcher_guide_title">Set %1$s as Default Home Screen App</string>
    <string name="launcher_guide_description">Such applications are known as launchers, which can take the place of your Android home screen.</string>
    <string name="main_home_sort_title">Sort by</string>
    <string name="main_home_sort_modified">Time</string>
    <string name="main_home_sort_modified_desc">(Newest)</string>
    <string name="main_home_sort_modified_asc">(Oldest)</string>
    <string name="main_home_sort_name">Name</string>
    <string name="main_home_sort_name_asc">(A-Z)</string>
    <string name="main_home_sort_name_desc">(Z-A)</string>
    <string name="main_home_sort_size">Size</string>
    <string name="main_home_sort_size_desc">(Big first)</string>
    <string name="main_home_sort_size_asc">(Small first)</string>
    <string name="fragment_home_title">File Viewer</string>
    <string name="fragment_home_search_hint">Search…</string>
    <string name="main_home_menu_sort">Sort</string>
    <string name="main_home_menu_choose">Pick</string>
    <string name="main_tab_pdf">PDF</string>
    <string name="main_tab_word">Word</string>
    <string name="main_tab_excel">Excel</string>
    <string name="main_tab_ppt">PPT</string>
    <string name="main_tab_txt">Txt</string>
    <string name="main_tab_image">Image</string>
    <string name="main_tab_all">All</string>
    <string name="main_tab_recent">Recent</string>
    <string name="main_tab_clean">Clean</string>
    <string name="main_tab_tools">Tools</string>
    <string name="main_tab_file">Files</string>
    <string name="main_tab_favorite">Favorite</string>
    <string name="action_search">Search</string>
    <string name="file_not_found">File missing</string>
    <string name="file_name">Name</string>
    <string name="file_path">Path</string>
    <string name="file_size">Size</string>
    <string name="action_favorite">Like</string>
    <string name="action_share">Send</string>
    <string name="action_add_to_desktop">Add to home</string>
    <string name="action_rename">Rename</string>
    <string name="action_details">Info</string>
    <string name="action_delete">Delete</string>
    <string name="action_set_password">Lock</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_skip">Skip</string>
    <string name="tool_import_file">Import</string>
    <string name="tool_scan_pdf">Scan</string>
    <string name="tool_lock_pdf">Lock</string>
    <string name="tool_unlock_pdf">Unlock</string>
    <string name="tool_image_pdf">Image→PDF</string>
    <string name="tool_file_clean">Cleaner</string>
    <string name="tool_print_pdf">Print</string>
    <string name="tool_merge_pdf">Merge</string>
    <string name="tool_percent">%1$d%%</string>
    <string name="tool_clean_size_total">/</string>
    <string name="tool_clean_btn">Clean</string>
    <string name="tool_add_widget">Add widget</string>
    <string name="merge_button_text_selected">Merge %1$d</string>
    <string name="merge_button_text_default">Pick ≥2 files</string>
    <string name="merge_pdf_title">Merge</string>
    <string name="split_pdf_title">Split</string>
    <string name="split_button_text_selected">Split %1$d</string>
    <string name="split_button_text_default">Pick ≥1 file</string>
    <string name="pdf_page_grid_merge_title">Pick pages to merge</string>
    <string name="pdf_page_grid_split_title">Pick pages to split</string>
    <string name="merge_pages_button_text">Merge %1$d pages</string>
    <string name="split_pages_button_text">Split %1$d pages</string>
    <string name="merge_button_default_text">Choose pages</string>
    <string name="split_button_default_text">Choose pages</string>
    <string name="select_all_pages">Select all</string>
    <string name="deselect_all_pages">Clear</string>
    <string name="pages_selected_info">%1$d / %2$d</string>
    <string name="no_pdf_pages_found">No pages</string>
    <string name="action_merge">Merge</string>
    <string name="action_split">Split</string>
    <string name="pages_selected_format">%1$d chosen</string>
    <string name="clean_junk_files">Junk</string>
    <string name="clean_obsolete_apk">Old APK</string>
    <string name="clean_temp_files">Temp</string>
    <string name="clean_log_files">Logs</string>
    <string name="clean_scanning">Scanning…</string>
    <string name="clean_scanning_folder">Scan: %1$s</string>
    <string name="clean_button_text">Clean %1$s</string>
    <string name="clean_button_scanning">Scanning…</string>
    <string name="clean_button_scanning_text">Scanning</string>
    <string name="clean_junk_scan">Junk Scan</string>
    <string name="clean_junk_title">Junk Cleanup</string>
    <string name="clean_junk_clean">Clean</string>
    <string name="clean_junk_cleaning">Cleaning your device, please hold on…</string>
    <string name="clean_junk_clean_suc">Cleaned! %1$s</string>
    <string name="process_manager_title">Process Manager</string>
    <string name="process_manager_title_short">Process</string>
    <string name="process_manager_desc">Manage processes running in the background</string>
    <string name="process_manager_scan">Scan Now</string>
    <string name="process_manager_scan_desc">Scanning for running processes</string>
    <string name="process_manager_suc_tip">Stopped %1$s applications running in the background.</string>
    <string name="process_manager_clean_now">Clean Now</string>
    <string name="process_manager_clean_tip">Scan and clean junk on your phone</string>
    <string name="process_manager_clean_used">Used</string>
    <string name="process_manager_clean_ba">Background Apps</string>
    <string name="process_manager_clean_st">Stop</string>
    <string name="process_manager_clean_done">Done</string>
    <string name="lock_set_password">Set pass</string>
    <string name="lock_set_password_desc">Protect with password</string>
    <string name="lock_remove_password">Remove lock</string>
    <string name="lock_remove_password_desc">Remove password</string>
    <string name="lock_title_set_password">Set Password</string>
    <string name="lock_password_hint">Password</string>
    <string name="lock_confirm_password_hint">Confirm</string>
    <string name="dialog_password_incorrect">Wrong pass</string>
    <string name="image_preview_save_developing">Coming soon</string>
    <string name="image_preview_load_failed">Load failed</string>
    <string name="image_preview_unsupported_type">Unsupported</string>
    <string name="image_preview_pager_indicator">%1$d/%2$d</string>
    <string name="choose_file_selected_count">%1$d picked</string>
    <string name="choose_file_delete_confirm_title">Sure?</string>
    <string name="choose_file_delete_confirm_message">Delete %1$d files? Can\'t undo.</string>
    <string name="choose_file_delete_confirm_cancel">No</string>
    <string name="choose_file_delete_confirm_ok">Yes</string>
    <string name="choose_file_delete_single_confirm_message">Delete %1$s?</string>
    <string name="choose_file_title_selected_count">%1$d chosen</string>
    <string name="choose_file_delete">Delete</string>
    <string name="choose_file_share">Send</string>
    <string name="setting_feedback_email">1286041359@qq.com</string>
    <string name="setting_google_play_url">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="language_skip_title">Skip?</string>
    <string name="language_skip_message">Use %1$s as default.</string>
    <string name="language_skip_next">Next</string>
    <string name="language_default">System</string>
    <string name="guide_skip_message">Skip intro? You can rewatch in Settings.</string>
    <string name="setting_privacy_policy_url">https://www.baidu.com</string>
    <string name="setting_user_agreement_url">https://www.baidu.com</string>
    <string name="setting_title">Settings</string>
    <string name="setting_floating_window_enable">Show Lock Screen</string>
    <string name="setting_language">Language</string>
    <string name="setting_night_mode">Dark</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_rate_us">Rate</string>
    <string name="setting_privacy_policy">Privacy</string>
    <string name="setting_terms_of_service">Terms</string>
    <string name="setting_lang_tip">Pick language. Change later in Settings.</string>
    <string name="success_import_pdf_title">Import</string>
    <string name="success_import_pdf_desc">Grab files anywhere</string>
    <string name="success_import_pdf_btn">Import</string>
    <string name="success_scan_pdf_title">Scan</string>
    <string name="success_scan_pdf_desc">Camera to PDF</string>
    <string name="success_scan_pdf_btn">Scan</string>
    <string name="success_lock_pdf_title">Lock</string>
    <string name="success_lock_pdf_desc">Add password</string>
    <string name="success_lock_pdf_btn">Lock</string>
    <string name="success_unlock_pdf_title">Unlock</string>
    <string name="success_unlock_pdf_desc">Remove password</string>
    <string name="success_unlock_pdf_btn">Open</string>
    <string name="success_clean_title">Cleaner</string>
    <string name="success_clean_desc">Free up space</string>
    <string name="success_clean_btn">Clean</string>
    <string name="success_complete">Done</string>
    <string name="success_function_file_antivirus">Antivirus</string>
    <string name="success_function_file_antivirus_desc">Keep files safe</string>
    <string name="success_function_scan_now">Scan</string>
    <string name="permission_storage_denied">Need file access</string>
    <string name="permission_dialog_later">Later</string>
    <string name="permission_dialog_allow_all_files">Allow all files</string>
    <string name="permission_dialog_needed">Need Permission</string>
    <string name="permission_dialog_allow_access">Allow access</string>
    <string name="permission_dialog_allow_access_desc">Allow File Viewer to access all files</string>
    <string name="permission_dialog_detail">For your convenience, please allow the App to access all your files. The document information we organize will only be used on the current device</string>
    <string name="permission_dialog_description">Allow File Viewer to access all files</string>
    <string name="permission_dialog_allow">Allow</string>
    <string name="file_detail_format">Format</string>
    <string name="file_detail_path">Path</string>
    <string name="file_detail_last_modified">Modified</string>
    <string name="dialog_pdf_default_launch_content">Set File Viewer as default to open faster</string>
    <string name="pdf_default_just_once">Once</string>
    <string name="pdf_default_always">Always</string>
    <string name="introduction_title_3"><![CDATA[Get started in <font color="#FB4949">2 easy</font> steps:]]></string>
    <string name="introduction_step1_text">Tap \"Continue\" below</string>
    <string name="introduction_step2_text">Tap on \"PDF Viewer\" &amp; set as your default home app</string>
    <string name="introduction_btn_continue">Continue</string>
    <string name="introduction_not_now">Not now</string>
    <string name="introduction_step1_title">Step1：</string>
    <string name="introduction_step2_title">Step2：</string>
    <string name="exit_app_dialog_title">Are you sure want to exit the app?</string>
    <string name="exit_app_dialog_positive">Confirm Exit</string>
    <string name="exit_app_dialog_negative">Cancel</string>
    <string name="shortcut_uninstall_title">Uninstalling may delete saved docs. Continue?</string>
    <string name="shortcut_uninstall_content">Tell us why, we can improve</string>
    <string name="shortcut_uninstall_btn_agree">Keep app</string>
    <string name="shortcut_uninstall_btn_still">Uninstall</string>
</resources>