<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_top"
        android:src="@mipmap/bg_dialog_pdf_default_launch_top"
        app:layout_constraintDimensionRatio="H,1000:753"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/ll_btn"
        android:background="#e3e8f8"
        app:layout_constraintBottom_toBottomOf="@id/iv_top"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:text="@string/pdf_default_just_once"
            android:textColor="#888888"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="#d6d6d7"
            app:cornerRadius="10dp"
            android:layout_marginStart="15dp"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm1"
            android:text="@string/pdf_default_always"
            android:backgroundTint="#fc4949"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cornerRadius="10dp"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.noober.background.view.BLLinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bl_solid_color="@color/white"
        app:bl_corners_bottomRadius="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_content"
            android:layout_margin="15dp"
            android:textSize="15sp"
            android:text="@string/dialog_pdf_default_launch_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm2"
            android:text="@string/permission_dialog_allow"
            android:backgroundTint="@color/black"
            app:cornerRadius="10dp"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.noober.background.view.BLLinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>