<?xml version="1.0" encoding="utf-8"?>
<com.noober.background.view.BLConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="20dp"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingBottom="35dp"
    app:bl_solid_color="@color/default_background"
    app:bl_corners_topRadius="15dp">

    <ImageView
        android:id="@+id/iv_file_lock"
        android:src="@mipmap/ic_file_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/action_set_password"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_file_lock"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_description"
        android:text="@string/lock_set_password_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.noober.background.view.BLEditText
        android:id="@+id/et_content"
        tools:text="jfaodijf"
        android:paddingStart="10dp"
        android:paddingEnd="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:bl_stroke_width="1dp"
        app:bl_stroke_color="#F0F0F0"
        app:bl_solid_color="#F9F9F9"
        app:bl_corners_radius="7dp"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:minHeight="50dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iv_visible"
        android:src="@drawable/cancel_24px"
        app:layout_constraintTop_toTopOf="@id/et_content"
        app:layout_constraintBottom_toBottomOf="@id/et_content"
        app:layout_constraintEnd_toEndOf="@id/et_content"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:text="@string/action_cancel"
            android:textColor="@color/black"
            android:backgroundTint="#dfe0e4"
            app:cornerRadius="6dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:text="@string/action_ok"
            android:backgroundTint="@color/theme_color"
            app:cornerRadius="6dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</com.noober.background.view.BLConstraintLayout>